Separate files into .cpp and .h

--- a/PhysicsGame/PhysicsProject/PhysicsProject.vcxproj
+++ b/PhysicsGame/PhysicsProject/PhysicsProject.vcxproj
@@ -140,6 +140,9 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="PhysicsProject.cpp" />
+    <ClCompile Include="Calculator.cpp" />
+    <ClCompile Include="Menus.cpp" />
+    <ClCompile Include="Game.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
