--- a/PhysicsGame/PhysicsProject/PhysicsProject.vcxproj.filters
+++ b/PhysicsGame/PhysicsProject/PhysicsProject.vcxproj.filters
@@ -18,5 +18,14 @@
     <ClCompile Include="PhysicsProject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Calculator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Menus.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
